# bs-monitor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  evaluation_results.json  pyproject.toml
src/: dataset.py  visualize_audio.py
src/analysis/: analyze_csv_data.py  check_wav_lengths.py  visualize_audio.py
src/datasets/: process_wav_dataset.py  relabel_text_data.py
src/fetch-resources/: download_wav2vec2_models.py
src/train/: clear_cache.py  evaluate.py  test_data_loading.py  test_wav2vec2_framing.py  train.py
src/train/binary-classifier/: __init__.py  evaluate.py  train.py  upload_to_hub.py
src/train/multi-classifier/: __init__.py  config.py  data_splits.py  datasets.py  evaluate.py  generate_labels.py  logging_config.py  test_frame_rates.py  train.py
src/train/multi-classifier/splits/: splits_2s_seed42.json
